--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>⧖ Signal Trust</title>
+  <title>Recursive Stewardship</title>
   <style>
     body {
       background-color: #0c0c0c;
@@ -15,14 +15,14 @@
     }
     h1 {
       font-size: 3rem;
-      color: #ffffff;
+      color: #e0e0e0;
     }
     p {
       line-height: 1.6;
       font-size: 1.1rem;
     }
     a {
-      color: #99ddff;
+      color: #e0e0e0;
       text-decoration: none;
     }
     a:hover {
